// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Anandamide Integration Test parses anandamide 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "N",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "20": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Anandamide Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'N', 'C', 'C', 'O'], [null, null, null, null, null, '=', null, null, '=', null, null, '=', null, null, '=', null, null, null, null, null, null, null, null]);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(v2, 20);"
`;

exports[`2-Arachidonoylglycerol Integration Test parses 2-arachidonoylglycerol 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "O",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "20": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
    "22": [
      {
        "atoms": [
          "C",
          "O",
        ],
        "attachments": {},
        "bonds": [
          null,
          null,
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`2-Arachidonoylglycerol Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'O', 'C', 'C', 'O'], [null, null, null, null, null, '=', null, null, '=', null, null, '=', null, null, '=', null, null, null, null, null, null, null, null]);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(v2, 20);
export const v4 = Linear(['C', 'O']);
export const v5 = v3.attach(v4, 22);"
`;

exports[`THC Integration Test parses THC 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "11": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            "=",
            null,
            null,
            "=",
            null,
            null,
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 14,
          "substitutions": {
            "12": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {
            "5": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 4,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`THC Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 14, bonds: ['=', null, '=', null, null, '=', null, null, null, null, null, null, '=', null], branchDepths: [0, 0, 0, 1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 3] });
v2.metaPositions = [5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18];
v2.metaStart = 5;
v2.metaEnd = 18;
v2.attachments = { 11: [Linear(['C'])] };
export const v4 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 3, branchDepths: [1, 1, 2, 2, 3, 3] });
v4.metaPositions = [8, 9, 14, 15, 16, 17];
v4.metaStart = 8;
v4.metaEnd = 17;
v4.attachments = { 4: [Linear(['C'])] };
export const v6 = Ring({ atoms: 'C', size: 6, ringNumber: 3, offset: 4, bonds: [null, '=', null, null, null, null], branchDepths: [1, 1, 1, 2, 2, 2] });
v6.metaPositions = [9, 10, 11, 12, 13, 14];
v6.metaStart = 9;
v6.metaEnd = 14;
export const v7 = FusedRing([v2, v4, v6], { skipPositionComputation: true });
v7.metaTotalAtoms = 16;
v7.metaAllPositions = [5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 20, 21];
v7.metaSequentialRings = [];
v7.metaBranchDepthMap = new Map([[5, 0], [6, 0], [7, 0], [8, 1], [9, 1], [10, 1], [11, 1], [12, 2], [13, 2], [14, 2], [15, 2], [16, 3], [17, 3], [18, 3], [20, 2], [21, 1]]);
v7.metaParentIndexMap = new Map([[5, null], [6, null], [7, null], [8, 7], [9, 7], [10, 7], [11, 7], [12, 11], [13, 11], [14, 11], [15, 11], [16, 15], [17, 15], [18, 15], [20, 11], [21, 7]]);
v7.metaAtomValueMap = new Map([[5, 'C'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [10, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [14, 'C'], [15, 'C'], [16, 'O'], [17, 'C'], [18, 'C'], [20, 'C'], [21, 'C']]);
v7.metaBondMap = new Map([[5, null], [6, '='], [7, null], [8, '='], [9, null], [10, null], [11, '='], [12, null], [13, null], [14, null], [15, null], [16, null], [17, null], [18, '='], [20, null], [21, null]]);
v7.metaRingOrderMap = new Map([[5, [1, 1]], [6, [1]], [7, [1]], [8, [2, 2, 1]], [9, [3, 3, 2, 1]], [10, [3, 1]], [11, [3, 1]], [12, [3, 1]], [13, [3, 1]], [14, [3, 2, 1]], [15, [2, 1]], [16, [2, 1]], [17, [2, 1]], [18, [1]]]);
v7.metaSeqAtomAttachments = new Map();
export const v8 = Linear(['O']);
export const v9 = Molecule([v1, v7, v8]);"
`;

exports[`CBD Integration Test parses CBD 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {
        "3": [
          {
            "components": [
              {
                "atoms": "C",
                "attachments": {
                  "3": [
                    {
                      "atoms": [
                        "C",
                        "C",
                      ],
                      "attachments": {
                        "1": [
                          {
                            "atoms": [
                              "C",
                            ],
                            "attachments": {},
                            "bonds": [
                              "=",
                            ],
                            "type": "linear",
                          },
                        ],
                      },
                      "bonds": [
                        null,
                        null,
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  "=",
                  null,
                  null,
                  null,
                  null,
                ],
                "offset": 0,
                "ringNumber": 2,
                "size": 6,
                "substitutions": {},
                "type": "ring",
              },
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [],
                "type": "linear",
              },
            ],
            "type": "molecule",
          },
        ],
        "4": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`CBD Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 1, 2, 3] });
export const v3 = Ring({ atoms: 'C', size: 6, ringNumber: 2, bonds: [null, '=', null, null, null, null], branchDepths: [1, 1, 1, 2, 2, 2] });
export const v4 = Linear(['C', 'C']);
export const v5 = Linear(['C'], ['=']);
export const v6 = v4.attach(v5, 1);
export const v7 = v3.attach(v6, 3);
export const v8 = Linear(['C']);
export const v9 = Molecule([v7, v8]);
export const v10 = v2.attach(v9, 3);
export const v11 = Linear(['O']);
export const v12 = v10.attach(v11, 4);
export const v13 = Linear(['O']);
export const v14 = Molecule([v1, v12, v13]);"
`;

exports[`Nabilone Integration Test parses nabilone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {
        "7": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "11": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "7": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            "=",
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 14,
          "substitutions": {
            "12": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {
            "5": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 4,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Nabilone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'C', 'C']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(v2, 7);
export const v4 = Linear(['C']);
export const v5 = v3.attach(v4, 7);
export const v6 = Ring({ atoms: 'C', size: 14, bonds: ['=', null, '=', null, null, null, null, null, null, null, null, null, '=', null], branchDepths: [0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2] });
v6.metaPositions = [9, 10, 11, 12, 13, 14, 15, 17, 18, 19, 20, 21, 22, 23];
v6.metaStart = 9;
v6.metaEnd = 23;
v6.attachments = { 7: [Linear(['O'], ['='])], 11: [Linear(['C'])] };
export const v9 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 3, branchDepths: [1, 1, 1, 1, 2, 2] });
v9.metaPositions = [12, 13, 19, 20, 21, 22];
v9.metaStart = 12;
v9.metaEnd = 22;
v9.attachments = { 4: [Linear(['C'])] };
export const v11 = Ring({ atoms: 'C', size: 6, ringNumber: 3, offset: 4 });
v11.metaPositions = [13, 14, 15, 17, 18, 19];
v11.metaStart = 13;
v11.metaEnd = 19;
v11.attachments = { 3: [Linear(['O'], ['='])] };
export const v13 = FusedRing([v6, v9, v11], { skipPositionComputation: true });
v13.metaTotalAtoms = 15;
v13.metaAllPositions = [9, 10, 11, 12, 13, 14, 15, 17, 18, 19, 20, 21, 22, 23, 25];
v13.metaSequentialRings = [];
v13.metaBranchDepthMap = new Map([[9, 0], [10, 0], [11, 0], [12, 1], [13, 1], [14, 1], [15, 1], [17, 1], [18, 1], [19, 1], [20, 1], [21, 2], [22, 2], [23, 2], [25, 1]]);
v13.metaParentIndexMap = new Map([[9, null], [10, null], [11, null], [12, 11], [13, 11], [14, 11], [15, 11], [17, 11], [18, 11], [19, 11], [20, 11], [21, 20], [22, 20], [23, 20], [25, 11]]);
v13.metaAtomValueMap = new Map([[9, 'C'], [10, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [14, 'C'], [15, 'C'], [17, 'C'], [18, 'C'], [19, 'C'], [20, 'C'], [21, 'O'], [22, 'C'], [23, 'C'], [25, 'C']]);
v13.metaBondMap = new Map([[9, null], [10, '='], [11, null], [12, '='], [13, null], [14, null], [15, null], [17, null], [18, null], [19, null], [20, null], [21, null], [22, null], [23, '='], [25, null]]);
v13.metaRingOrderMap = new Map([[9, [1, 1]], [10, [1]], [11, [1]], [12, [2, 2, 1]], [13, [3, 3, 2, 1]], [14, [3, 1]], [15, [3, 1]], [17, [3, 1]], [18, [3, 1]], [19, [3, 2, 1]], [20, [2, 1]], [21, [2, 1]], [22, [2, 1]], [23, [1]]]);
v13.metaSeqAtomAttachments = new Map();
export const v14 = Linear(['O']);
export const v15 = Molecule([v5, v13, v14]);"
`;

exports[`Palmitoylethanolamide Integration Test parses palmitoylethanolamide 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "N",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "16": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Palmitoylethanolamide Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'N', 'C', 'C', 'O']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(v2, 16);"
`;
